moka create-key prints the key also in base64 now